# diode

./: .gdbinit  .gitignore  .lldbinit  AAAA.txt  LICENSE  Makefile  README.md  bochsrc.txt  copyfiles.sh  createdisk.sh  createinitrd.sh  demangle.d  dscanner.ini  env  frames.txt  import.py  import.sh  linker.ld  log.txt  meson.build  trace.py  user.ld  x.txt  x64-llvm.ini
cfg/: limine.cfg
data/: banner.txt
source/: boot.s  crt.s  defines.s  kernel.ld  task.c  user.ld
source/kernel/: autoinit.d  cpio.d  elf.d  guards.d  hashmap.d  io.d  irq.d  loafencode.d  main.d  mm.d  optional.d  platform.d  pmap.d  port.d  refptr.d  rtti.d  stivale.d  symbols.d  task.d  util.d  vfs.d
source/kernel/acpi/: rsdp.d
source/kernel/fs/: tempfs.d
source/kernel/irq/: irq.d
source/kernel/pcie/: mcfg.d  virtio.d
source/kernel/ports/: kbootstrap.d
source/kernel/syscall/: dispatch.d  exec.d  exit.d  generic.d  io.d  kprint.d  map.d  util.d
source/libled/: except.d
source/libsys/: entry.d  errno.d  io.d  loaf.d  mem.d  port.d  syscall.d  util.d
source/progs/: init.d  init_.d
source/vshared/: share.d
